<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_projects">

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.Towrevo.ui.navigation.project.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.Towrevo.ui.navigation.attendance.AttendenceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.Towrevo.ui.navigation.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.Towrevo.ui.navigation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>