<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.TowingTypeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <include android:id="@+id/toolbar_layout"
            layout="@layout/toolbar_layout"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/informationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/Font20Bold"
                tools:text="@string/information"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nowBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/button"
                android:background="@drawable/bg_round_corner_border"
                tools:text="@string/now"
                android:textColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/informationTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/scheduleBTN"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/scheduleBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/button"
                android:background="@drawable/button_background"
                tools:text="@string/schedule"
                app:layout_constraintStart_toEndOf="@id/nowBTN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/informationTV"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/calenderCard"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/nowBTN"
                app:layout_constraintStart_toStartOf="@id/nowBTN">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageCalender"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                style="@style/Font14"
                android:textColor="@color/black"
                android:text="21 dec, 10:45 AM"
                app:layout_constraintTop_toTopOf="@id/calenderCard"
                app:layout_constraintBottom_toBottomOf="@id/calenderCard"
                app:layout_constraintStart_toEndOf="@id/calenderCard"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ll_info">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleTypeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/Font20Bold"
                tools:text="@string/towing_vehicle_type"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/vehicleTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:ms_hint="@string/vehicle_type"
                app:ms_enableErrorLabel="false"
                app:ms_dropDownHintView="@layout/item_hint"
                app:ms_arrowColor="@color/black_80"
                app:ms_hintColor="@color/black_80"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/vehicle_type"
                app:ms_alignLabels="true"
                app:ms_arrowSize="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/vehicleTypeTV"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_towingReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ll_type">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/towingReasonTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Font20Bold"
            tools:text="@string/select_reason_for_towing"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/towingReasonTV"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/roadServiceRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/onRoad_service"
                style="@style/radioButton"/>
            <RadioButton
                android:id="@+id/batteryIssueRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/battery_issue"
                style="@style/radioButton"/>
            <RadioButton
                android:id="@+id/flatTireRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/flat_tire"
                style="@style/radioButton"/>
            <RadioButton
                android:id="@+id/accidentRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/accident"
                style="@style/radioButton"/>
            <RadioButton
                android:id="@+id/crashRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/crash"
                style="@style/radioButton"/>
            <RadioButton
                android:id="@+id/otherRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/other"
                style="@style/radioButton"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/button"
            android:background="@drawable/button_background"
            tools:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>