<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/noInternetView"
        layout="@layout/no_internet_layout"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loginMainLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <include
            android:id="@+id/titleBar"
            layout="@layout/titlebar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:foregroundGravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailHintTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/email"
                app:hintTextAppearance="@style/HintTextAppearance">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailET"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordHintTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/password"
                app:hintTextAppearance="@style/HintTextAppearance">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordET"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/eye"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotpasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginBT"
                    style="@style/Button"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleLoginBT"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbLoginBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termconditonTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/term_condition"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacypolicyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/changePWTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>