<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlNoInternet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:visibility="visible">


    <LinearLayout
        android:id="@+id/llNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/no_internet_thumb" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNoInternetConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPleaseCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/please_check_your_internet_connection"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/retryTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/black"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:visibility="visible" />

    </RelativeLayout>
</RelativeLayout>

